fix color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ a {
   background-color: transparent;
 }
 a:hover {
-  color: #117964;
+  color: #7c86cd;
   text-decoration: underline;
 }
 
@@ -3177,7 +3177,7 @@ fieldset:disabled a.btn {
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #117964;
+  color: #7c86cd;
   text-decoration: underline;
 }
 .btn-link:focus,
@@ -4926,7 +4926,7 @@ input[type="button"].btn-block {
 }
 .page-link:hover {
   z-index: 2;
-  color: #117964;
+  color: #7c86cd;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -10206,7 +10206,7 @@ button.bg-dark:focus {
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #117964 !important;
+  color: #7c86cd !important;
 }
 
 .text-secondary {
@@ -10679,6 +10679,11 @@ form .row:first-child .floating-label-form-group {
   padding-bottom: 5rem;
   background-color: #2c3e50;
   color: #fff;
+}
+.copyright a,
+.copyright a:hover,
+.copyright a:visited {
+  color: #7c86cd;
 }
 
 .copyright {
